--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.striped-gradient {
+    background: repeating-linear-gradient(
+        45deg,
+        #ffffff,
+        #ffffff 10px,
+        #dddddd 10px,
+        #dddddd 20px
+    );
+}
